...
                    imageVector = Icons.Filled.AccountCircle, contentDescription = "Account"
                )
            }
        }
    }, actions = {
        TextButton(onClick = onLogout) {
            Text("Esci")
        }
    }, colors = TopAppBarDefaults.topAppBarColors(
        containerColor = MaterialTheme.colorScheme.surface,
        titleContentColor = MaterialTheme.colorScheme.onSurface,
        navigationIconContentColor = MaterialTheme.colorScheme.onSurface,
        actionIconContentColor = MaterialTheme.colorScheme.primary
...
